Fixes #13141: Add a max-width: 100%; to label elements so IE8 wraps text

--- a/less/forms.less
+++ b/less/forms.less
@@ -31,6 +31,7 @@ legend {
 
 label {
   display: inline-block;
+  max-width: 100%; // Force IE8 to wrap long content (see #13141)
   margin-bottom: 5px;
   font-weight: bold;
 }
